[package]
name = "gpp-solver"
version = "0.2.1"
description = "A small hybrid push-pull solver/planner that has the best of both worlds"
repository = "https://github.com/Ereski/gpp-solver"
authors = ["Carol Schulze <carol@ereski.org>"]
license = "BSD-2-Clause"
keywords = ["solver", "logic", "reactive", "no-std", "graph"]
categories = ["algorithms", "no-std"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# By default we compile an async crate that uses `futures` async locks under a
# normal std environment. JavaScript bindings are compiled by default in a
# WASM environment.
default = ["std", "futures-lock", "js-bindings"]

# Use std types. If not set, we still require the `alloc` crate for `no_std`.
std = ["wasm-bindgen/std"]

# Use `futures`'s locks.
futures-lock = []

# Use `tokio`'s locks.
tokio-lock = ["tokio"]

# Use `async-std`'s locks.
async-std-lock = ["async-lock"]

# Compile bindings for JavaScript. Useful if this library is being used with
# non-Rust languages in a WASM environment.
js-bindings = []

[dependencies]
async-lock = { version = "2.4.0", optional = true, default-features = false }
async-trait = { version = "0.1.52", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into"] }
futures = { version = "0.3.19", default-features = false, features = ["std"] }
tokio = { version = "1.15.0", optional = true, default-features = false, features = ["sync"] }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = { version = "0.3.55", default-features = false }
serde-wasm-bindgen = { version = "0.4.1", default-features = false }
wasm-bindgen = { version = "0.2.78", default-features = false }
wasm-bindgen-futures = { version = "0.4.28", default-features = false }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
futures-test = { version = "0.3.19", default-features = false, features = ["std"] }
petgraph = { version = "0.6.0", default-features = false }
tokio = { version = "1.15.0", default-features = false, features = ["rt-multi-thread", "macros"] }
void = { version = "1.0.2", default-features = false }
wasm-bindgen-test = { version = "0.3.28", default-features = false }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[profile.release]
codegen-units = 1
lto = true
